Refactor backend services and controllers to improve device management; update PostgreSQL configuration and database connection settings. Enhance frontend device management with API integration for fetching, updating, and deleting devices. Remove unused test files and streamline code for better maintainability.